--- a/noticias.html
+++ b/noticias.html
@@ -11,21 +11,22 @@
     <h1>Noticias Hernavia</h1>
   </header>
 
-  <nav class="nav-comun">
-    <a href="index.html">Inicio</a>
-    <a href="documentos.html">Documentos</a>
-    <a href="noticias.html">Noticias</a>
-    <a href="consultas.html">Consultas</a>
-    <a href="simbolos.html">Símbolos</a>
-    <a href="comounirse.html">¿Cómo unirse?</a>
-    <a href="sugerencias.html">Sugerencias</a>
-  </nav>
+<nav class="nav-comun">
+  <a href="index.html">Inicio</a>
+  <a href="documentos.html">Documentos</a>
+  <a href="noticias.html">Noticias</a>
+  <a href="consultas.html">Consultas</a>
+  <a href="simbolos.html">Símbolos</a>
+  <a href="comounirse.html">¿Cómo unirse?</a>
+  <a href="sugerencias.html">Sugerencias</a>
+</nav>
 
-  <!-- Botones para redirigir a cada tipo de noticia -->
-  <div style="text-align:center; margin:20px 0;">
-    <a href="noticias-.html" class="nav-comun" style="margin-right:10px;">Noticias</a>
-    <a href="noticias-random.html" class="nav-comun">Noticias Random</a>
-  </div>
+<!-- Botones debajo del nav -->
+<div style="text-align:center; margin:20px 0;">
+  <a href="noticias-oficiales.html" class="nav-comun" style="display:inline-block; margin-right:10px;">Noticias Oficiales</a>
+  <a href="noticias-random.html" class="nav-comun" style="display:inline-block;">Noticias Random</a>
+</div>
+
 
   <!-- Sección de ejemplo -->
   <section class="texto-largo" style="border-left:8px solid #006A44;">
