--- a/noticias.html
+++ b/noticias.html
@@ -25,9 +25,11 @@
 <div style="text-align:center; margin:20px 0;">
   <a href="noticias-oficiales.html" class="nav-comun" style="display:inline-block; margin-right:10px;">Noticias Oficiales</a>
   <a href="noticias-random.html" class="nav-comun" style="display:inline-block;">Noticias Random</a>
+<div>
+  <nav class="nav-comun">
+ <a href="noticias.html">Noticias</a>
+   <a href="sugerencias.html">Noticias-Random</a>
 </div>
-
-
   <!-- Sección de ejemplo -->
   <section class="texto-largo" style="border-left:8px solid #006A44;">
     <h2 style="color:#006A44;">Noticias Oficiales</h2>
