--- a/noticias.html
+++ b/noticias.html
@@ -3,12 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Noticias - Hernavia</title>
+  <title>Noticias</title>
+  <meta name="description" content="Descubre Hernavia, una identidad colombiana donde creatividad, comunidad y cultura se unen por un futuro sostenible.">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="author" content="Proyecto Hernavia">
+  <meta name="robots" content="index, follow">
+
+  <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
+
+  <link rel="preload" href="estilo.css" as="style">
   <link rel="stylesheet" href="estilo.css">
+
+  <link rel="manifest" href="manifest.json">
+
+  <link rel="canonical" href="https://hernavia.github.io/Hernavia/noticias.html">
 </head>
-<body>
+
   <header>
-    <h1>Noticias Hernavia</h1>
+    <h1>Noticias de Hernavia</h1>
   </header>
 
 <nav class="nav-comun">
@@ -21,15 +33,12 @@
   <a href="sugerencias.html">Sugerencias</a>
 </nav>
 
-<!-- Botones debajo del nav -->
-<div style="text-align:center; margin:20px 0;">
-  <a href="noticias-oficiales.html" class="nav-comun" style="display:inline-block; margin-right:10px;">Noticias Oficiales</a>
-  <a href="noticias-random.html" class="nav-comun" style="display:inline-block;">Noticias Random</a>
 <div>
   <nav class="nav-comun">
  <a href="noticias.html">Noticias</a>
    <a href="sugerencias.html">Noticias-Random</a>
 </div>
+  
   <!-- Sección de ejemplo -->
   <section class="texto-largo" style="border-left:8px solid #006A44;">
     <h2 style="color:#006A44;">Noticias Oficiales</h2>
