--- a/noticias.html
+++ b/noticias.html
@@ -36,7 +36,7 @@
 <div>
   <nav class="nav-comun">
  <a href="noticias.html">Noticias</a>
-   <a href="sugerencias.html">Noticias-Random</a>
+   <a href="noticias-random.html">Noticias Random</a>
 </div>
   
   <!-- Sección de ejemplo -->
