--- a/noticias-random.html
+++ b/noticias-random.html
@@ -1,54 +1,30 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noticias Random - Hernavia</title>
-    <meta name="description" content="Noticias aleatorias y curiosas de Hernavia y del mundo. Aquí encontrarás novedades y datos curiosos que no entran en otras categorías.">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
-    <link rel="preload" href="estilo.css" as="style">
-    <link rel="stylesheet" href="estilo.css">
-    <link rel="canonical" href="https://hernavia.github.io/Hernavia/noticias-random.html">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="Proyecto Hernavia">
-</head>
-<body>
-
-<header>
-    <h1>Noticias Random</h1>  
-</header>
-
-<nav class="nav-comun">
-    <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
-    <a href="documentos.html">Documentos</a>
-    <a href="noticias.html">Noticias</a>
-    <a href="consultas.html">Consultas</a>
-    <a href="simbolos.html">Símbolos</a>
-    <a href="comounirse.html">¿Cómo unirse?</a>
-    <a href="sugerencias.html">Sugerencias</a>
-    <a href="noticias-random.html">Noticias Random</a>
-</nav>
-
 <main>
-    <section class="section">
-        <h2>Noticias del día</h2>
-        <p>Hoy 5 de octubre de 2025 feliz mes de octubre, no hay noticias por ahora.</p>
+    <section class="texto-largo" style="border-left:8px solid #ADFF2F;">
+        <h2 style="color:#ADFF2F;">Noticias del día</h2>
+        <details>
+            <summary>5 de octubre de 2025</summary>
+            <p>No hay noticias por ahora.</p>
+        </details>
     </section>
 
-    <section class="section">
-        <h2>Noticias del mundo</h2>
-        <p>Hoy no hay nada interesante.</p>
+    <section class="texto-largo" style="border-left:8px solid #ADFF2F;">
+        <h2 style="color:#ADFF2F;">Noticias del mundo</h2>
+        <details>
+            <summary>Sin novedades</summary>
+            <p>Hoy no hay nada interesante.</p>
+        </details>
     </section>
 
-    <section class="section">
-        <h2>Curiosidades Random</h2>
-        <p>Aquí se mostrarán curiosidades, datos curiosos o cualquier noticia fuera de lo común.</p>
+    <section class="texto-largo" style="border-left:8px solid #ADFF2F;">
+        <h2 style="color:#ADFF2F;">Curiosidades Random</h2>
+        <details>
+            <summary>Dato curioso 1</summary>
+            <p>Contenido random o curiosidad fuera de lo común...</p>
+        </details>
+        <details>
+            <summary>Dato curioso 2</summary>
+            <p>Otro dato divertido o interesante...</p>
+        </details>
     </section>
 </main>
 
-<footer>
-    &copy; 2025 Hernavia - Proyecto Cultural
-</footer>
-
-</body>
-</html>
