--- a/noticias-random.html
+++ b/noticias-random.html
@@ -1,3 +1,28 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hernavia</title>
+  <meta name="description" content="Descubre Hernavia, una identidad colombiana donde creatividad, comunidad y cultura se unen por un futuro sostenible.">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="author" content="Proyecto Hernavia">
+  <meta name="robots" content="index, follow">
+
+  <!-- Ícono -->
+  <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
+
+  <!-- Precarga de estilos -->
+  <link rel="preload" href="estilo.css" as="style">
+  <link rel="stylesheet" href="estilo.css">
+
+  <!-- Manifesto para PWA -->
+  <link rel="manifest" href="manifest.json">
+
+  <!-- URL canónica -->
+  <link rel="canonical" href="https://hernavia.github.io/Hernavia/">
+</head>
+
 <main>
     <section class="texto-largo" style="border-left:8px solid #ADFF2F;">
         <h2 style="color:#ADFF2F;">Noticias del día</h2>
