--- a/noticias.html
+++ b/noticias.html
@@ -38,27 +38,11 @@
  <a href="noticias.html">Noticias</a>
    <a href="noticias-random.html">Noticias Random</a>
 </div>
-  
-  <!-- Sección de ejemplo -->
-  <section class="texto-largo" style="border-left:8px solid #006A44;">
-    <h2 style="color:#006A44;">Noticias Oficiales</h2>
-    <details open>
-      <summary>Noticia Oficial 1</summary>
-      <div class="news-item">
-        <h3>Noticia Oficial 1</h3>
-        <p>Contenido oficial de Hernavia...</p>
-      </div>
-    </details>
 
-    <details>
-      <summary>Noticia Oficial 2</summary>
-      <div class="news-item">
-        <h3>Noticia Oficial 2</h3>
-        <p>Otro contenido oficial...</p>
-      </div>
-    </details>
-  </section>
-
+   <section id="que-es" class="texto-largo">
+      <h2>Noticia 002</h2>
+<p>En ek parque de gachancipa habra una feria empresarias de fecha no confirmada y yo estare con yukihert (pastelitos de yuca), eso es todo no hay mas por ahora</p>
+     
   <footer>
     &copy; 2025 Hernavia — Proyecto Cultural
   </footer>
