--- a/noticias-random.html
+++ b/noticias-random.html
@@ -22,6 +22,23 @@
   <!-- URL canónica -->
   <link rel="canonical" href="https://hernavia.github.io/Hernavia/">
 </head>
+  
+  <nav class="nav-comun">
+    <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
+    <a href="documentos.html">Documentos</a>
+    <a href="noticias.html">Noticias</a>
+    <a href="consultas.html">Consultas</a>
+    <a href="simbolos.html">Símbolos</a>
+    <a href="comounirse.html">¿Cómo unirse?</a>
+    <a href="sugerencias.html">Sugerencias</a>
+    <a href="noticias-random.html">Noticias Random</a>
+  </nav>
+  
+<div>
+  <nav class="nav-comun">
+ <a href="noticias.html">Noticias</a>
+   <a href="noticias-random.html">Noticias Random</a>
+</div>
 
 <main>
     <section class="texto-largo" style="border-left:8px solid #ADFF2F;">
