--- a/noticias.html
+++ b/noticias.html
@@ -41,8 +41,8 @@
 
    <section id="que-es" class="texto-largo">
       <h2>Noticia 002</h2>
-<p>En ek parque de gachancipa habra una feria empresarias de fecha no confirmada y yo estare con yukihert (pastelitos de yuca), eso es todo no hay mas por ahora</p>
-     
+<p>En el parque de gachancipa habra una feria empresarias de fecha no confirmada y yo estare con yukihert (pastelitos de yuca), eso es todo no hay mas por ahora</p>
+</section>
   <footer>
     &copy; 2025 Hernavia — Proyecto Cultural
   </footer>
