--- a/noticias.html
+++ b/noticias.html
@@ -35,9 +35,11 @@
 
 <div>
   <nav class="nav-comun">
- <a href="noticias.html">Noticias</a>
-   <a href="noticias-random.html">Noticias Random</a>
+    <a href="noticias.html">Noticias</a>
+    <a href="noticias-random.html" style="color:#ADFF2F; border-color:#ADFF2F;">Noticias Random</a>
+  </nav>
 </div>
+
 
    <section id="que-es" class="texto-largo">
       <h2>Noticia 002</h2>
