--- a/noticias.html
+++ b/noticias.html
@@ -36,7 +36,7 @@
 <div>
   <nav class="nav-comun">
     <a href="noticias.html">Noticias</a>
-    <a href="noticias-random.html" style="color:#ADFF2F; border-color:#ADFF2F;">Noticias Random</a>
+    <a href="noticias-random.html" style="color:#ADFF2F; border-color:#8AFF00;">Noticias Random</a>
   </nav>
 </div>
 
