--- a/noticias-random.html
+++ b/noticias-random.html
@@ -22,6 +22,10 @@
   <!-- URL canónica -->
   <link rel="canonical" href="https://hernavia.github.io/Hernavia/">
 </head>
+
+   <header>
+    <h1>Noticias Random</h1>
+  </header>
   
   <nav class="nav-comun">
     <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
@@ -36,8 +40,9 @@
   
 <div>
   <nav class="nav-comun">
- <a href="noticias.html">Noticias</a>
-   <a href="noticias-random.html">Noticias Random</a>
+    <a href="noticias.html">Noticias</a>
+    <a href="noticias-random.html" style="color:#ADFF2F; border-color:#8AFF00;">Noticias Random</a>
+  </nav>
 </div>
 
 <main>
