--- a/noticias-random.html
+++ b/noticias-random.html
@@ -3,75 +3,74 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hernavia</title>
-  <meta name="description" content="Descubre Hernavia, una identidad colombiana donde creatividad, comunidad y cultura se unen por un futuro sostenible.">
-  <meta name="theme-color" content="#ffffff">
-  <meta name="author" content="Proyecto Hernavia">
-  <meta name="robots" content="index, follow">
-
-  <!-- Ícono -->
-  <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
-
-  <!-- Precarga de estilos -->
-  <link rel="preload" href="estilo.css" as="style">
+  <title>Noticias Random - Hernavia</title>
   <link rel="stylesheet" href="estilo.css">
-
-  <!-- Manifesto para PWA -->
-  <link rel="manifest" href="manifest.json">
-
-  <!-- URL canónica -->
-  <link rel="canonical" href="https://hernavia.github.io/Hernavia/">
 </head>
-
-   <header>
+<body>
+  <header>
     <h1>Noticias Random</h1>
   </header>
-  
+
   <nav class="nav-comun">
-    <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
-    <a href="documentos.html">Documentos</a>
+    <a href="index.html">Inicio</a>
     <a href="noticias.html">Noticias</a>
-    <a href="consultas.html">Consultas</a>
-    <a href="simbolos.html">Símbolos</a>
-    <a href="comounirse.html">¿Cómo unirse?</a>
-    <a href="sugerencias.html">Sugerencias</a>
-    <a href="noticias-random.html">Noticias Random</a>
+    <a href="noticias-random.html" style="color:#ADFF2F; border-color:#ADFF2F;">Noticias Random</a>
   </nav>
-  
-<div>
-  <nav class="nav-comun">
-    <a href="noticias.html">Noticias</a>
-    <a href="noticias-random.html" style="color:#ADFF2F; border-color:#8AFF00;">Noticias Random</a>
-  </nav>
-</div>
 
-<main>
+  <main>
     <section class="texto-largo" style="border-left:8px solid #ADFF2F;">
-        <h2 style="color:#ADFF2F;">Noticias del día</h2>
-        <details>
-            <summary>5 de octubre de 2025</summary>
-            <p>No hay noticias por ahora.</p>
-        </details>
+      <h2 style="color:#ADFF2F;">Noticias Casi Diarias</h2>
+
+      <details>
+        <summary>Banco Mundial eleva previsión de crecimiento para América Latina en 2026</summary>
+        <p>
+          El Banco Mundial ajustó al alza su estimación de crecimiento para América Latina en 2026, proyectando un crecimiento del 2,5 % frente al 2,4 % anterior. :contentReference[oaicite:0]{index=0}  
+        </p>
+        <p style="font-size:0.85em; color:#666;">
+          Fuente: <a href="https://www.reuters.com/world/americas/world-bank-lifts-latin-america-economic-growth-estimate-2026-2025-10-07/" target="_blank">Reuters</a>
+        </p>
+      </details>
+
+      <details>
+        <summary>Autoridades mexicanas capturan líder de la banda Tren de Aragua</summary>
+        <p>
+          Las autoridades mexicanas detuvieron a un presunto líder local de la banda Tren de Aragua, acusado de tráfico de drogas, secuestro y otros delitos. :contentReference[oaicite:1]{index=1}  
+        </p>
+        <p style="font-size:0.85em; color:#666;">
+          Fuente: <a href="https://apnews.com/article/772785159e295bdacce122b5edebf295" target="_blank">AP News</a>
+        </p>
+      </details>
+
     </section>
 
     <section class="texto-largo" style="border-left:8px solid #ADFF2F;">
-        <h2 style="color:#ADFF2F;">Noticias del mundo</h2>
-        <details>
-            <summary>Sin novedades</summary>
-            <p>Hoy no hay nada interesante.</p>
-        </details>
-    </section>
+      <h2 style="color:#ADFF2F;">Curiosidades Random</h2>
 
-    <section class="texto-largo" style="border-left:8px solid #ADFF2F;">
-        <h2 style="color:#ADFF2F;">Curiosidades Random</h2>
-        <details>
-            <summary>Dato curioso 1</summary>
-            <p>Contenido random o curiosidad fuera de lo común...</p>
-        </details>
-        <details>
-            <summary>Dato curioso 2</summary>
-            <p>Otro dato divertido o interesante...</p>
-        </details>
-    </section>
-</main>
+      <details>
+        <summary>La bioluminiscencia en organismos vivos</summary>
+        <p>
+          Algunos organismos, como ciertos hongos, algas y animales marinos, son capaces de producir luz propia a través de reacciones químicas internas, fenómeno conocido como bioluminiscencia. :contentReference[oaicite:2]{index=2}  
+        </p>
+        <p style="font-size:0.85em; color:#666;">
+          Fuente: <a href="https://www.ecologiaverde.com/curiosidades-de-la-naturaleza-que-te-sorprenderan-1297.html" target="_blank">Ecología Verde</a>
+        </p>
+      </details>
 
+      <details>
+        <summary>Rocas que “se mueven” por sí solas en el Valle de la Muerte</summary>
+        <p>
+          En el Valle de la Muerte (EE. UU.), algunas piedras dejan huellas en la superficie sin intervención aparente humana. Esto se debe a la formación de una capa fina de hielo y viento, que las desliza lentamente. :contentReference[oaicite:3]{index=3}  
+        </p>
+        <p style="font-size:0.85em; color:#666;">
+          Fuente: <a href="https://www.ambientum.com/ambientum/medio-natural/7-curiosidades-y-fenomenos-naturales-que-no-creeras.asp" target="_blank">Ambientum</a>
+        </p>
+      </details>
+
+    </section>
+  </main>
+
+  <footer>
+    &copy; 2025 Hernavia
+  </footer>
+</body>
+</html>
