--- a/noticias-random.html
+++ b/noticias-random.html
@@ -83,7 +83,7 @@
     </section>
   </main>
 
-  <style="border-left:8px solid #ADFF2F;">
+ <section class="texto-largo" style="border-left:8px solid #ADFF2F;">
     <h2>Referencias</h2>
     <ol>
       <li id="ref1"><a href="https://www.reuters.com/world/americas/world-bank-lifts-latin-america-economic-growth-estimate-2026-2025-10-07/" target="_blank">Reuters — World Bank lifts Latin America growth estimate for 2026</a></li>
