--- a/documentos.html
+++ b/documentos.html
@@ -1,171 +1,112 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documentos de Hernavia</title>
-    <meta name="description" content="Descubre los documentos iniciales de Hernavia para conocer sus principios y organización.">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
-    <link rel="preload" href="estilo.css" as="style">
-    <link rel="stylesheet" href="estilo.css">
-    <link rel="canonical" href="https://hernavia.github.io/Hernavia/documentos.html">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="Proyecto Hernavia">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Documentos de Hernavia</title>
+  <meta name="description" content="Descubre los documentos iniciales de Hernavia para conocer sus principios y organización.">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="author" content="Proyecto Hernavia">
+  <meta name="robots" content="index, follow">
+
+  <!-- Ícono -->
+  <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
+
+  <!-- Precarga de estilos -->
+  <link rel="preload" href="estilo.css" as="style">
+  <link rel="stylesheet" href="estilo.css">
+
+  <!-- Manifesto para PWA -->
+  <link rel="manifest" href="manifest.json">
+
+  <!-- URL canónica -->
+  <link rel="canonical" href="https://hernavia.github.io/Hernavia/documentos.html">
 </head>
 
 <body>
-    <header>
-        <h1>Documentos de Hernavia</h1>
-    </header>
+  <header>
+    <h1>Documentos de Hernavia</h1>
+  </header>
 
-    <nav class="nav-comun">
-        <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
-        <a href="documentos.html">Documentos</a>
-        <a href="noticias.html">Noticias</a>
-        <a href="consultas.html">Consultas</a>
-        <a href="simbolos.html">Símbolos</a>
-        <a href="comounirse.html">¿Cómo unirse?</a>
-        <a href="sugerencias.html">Sugerencias</a>
-    </nav>
+  <nav class="nav-comun">
+    <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
+    <a href="documentos.html" class="activo">Documentos</a>
+    <a href="noticias.html">Noticias</a>
+    <a href="consultas.html">Consultas</a>
+    <a href="simbolos.html">Símbolos</a>
+    <a href="comounirse.html">¿Cómo unirse?</a>
+    <a href="sugerencias.html">Sugerencias</a>
+  </nav>
 
-    <main>
-        <section class="section texto-largo">
-            <h2>Carta Fundacional</h2>
-            <p>La Carta Fundacional de Hernavia es un documento breve, pensado como la base de nuestra identidad y organización. Funciona como una “constitución” inicial que guía los pasos del proyecto mientras crece y se consolida.</p>
-            <p>En ella se establece al Arconte como máxima autoridad, encargado de proteger la unión de la comunidad y tomar decisiones mientras se desarrollan instituciones más amplias. También recoge los principios fundamentales: respeto entre ciudadanos, cuidado de la naturaleza, participación activa, innovación y fraternidad con otras culturas.</p>
-            <p>Además, describe las obligaciones de los ciudadanos, que incluyen aportar al desarrollo de la comunidad, respetar las decisiones colectivas, defender la paz y contribuir al progreso común. Señala también objetivos iniciales como impulsar la innovación, proteger el medio ambiente, fomentar la educación cívica y promover un desarrollo económico propio.</p>
-            <p>La Carta dedica un espacio a los símbolos de Hernavia, especialmente la bandera, que representa la naturaleza, la paz, la innovación y las raíces con Colombia. Finalmente, aclara que se trata de un documento transitorio que podrá transformarse en una versión más completa a futuro.</p>
-            <a href="carta.html" class="boton-hernavia">Leer carta completa</a>
-        </section>
+  <main>
+    <section class="section texto-largo">
+      <h2>Carta Fundacional</h2>
+      <p>La Carta Fundacional de Hernavia es un documento breve, pensado como la base de nuestra identidad y organización. Funciona como una “constitución” inicial que guía los pasos del proyecto mientras crece y se consolida.</p>
+      <p>En ella se establece al Arconte como máxima autoridad, encargado de proteger la unión de la comunidad y tomar decisiones mientras se desarrollan instituciones más amplias. También recoge los principios fundamentales: respeto entre ciudadanos, cuidado de la naturaleza, participación activa, innovación y fraternidad con otras culturas.</p>
+      <p>Además, describe las obligaciones de los ciudadanos, que incluyen aportar al desarrollo de la comunidad, respetar las decisiones colectivas, defender la paz y contribuir al progreso común. Señala también objetivos iniciales como impulsar la innovación, proteger el medio ambiente, fomentar la educación cívica y promover un desarrollo económico propio.</p>
+      <p>La Carta dedica un espacio a los símbolos de Hernavia, especialmente la bandera, que representa la naturaleza, la paz, la innovación y las raíces con Colombia. Finalmente, aclara que se trata de un documento transitorio que podrá transformarse en una versión más completa a futuro.</p>
+      <a href="carta.html" class="boton-hernavia">Leer carta completa</a>
+    </section>
 
-        <section class="section texto-largo">
-            <h2>Leyes Transitorias</h2>
-            <p>Las Leyes Transitorias de Hernavia son un conjunto de normas provisionales que guían el funcionamiento de la comunidad mientras se consolida la organización. Establecen cómo se puede revocar la ciudadanía, el aporte obligatorio de cada ciudadano, las penalizaciones por incumplimiento, la participación en votaciones y asambleas, la administración de fondos y la eliminación de datos personales en casos de renuncia.</p>
-            <p>Estas leyes buscan mantener la unidad, proteger la naturaleza, fomentar la innovación y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, siempre respetando los principios de respeto, paz, innovación y unión.</p>
-            <a href="leyes.html" class="boton-hernavia">Leer las leyes completas</a>
-        </section>
+    <section class="section texto-largo">
+      <h2>Leyes Transitorias</h2>
+      <p>Las Leyes Transitorias de Hernavia son un conjunto de normas provisionales que guían el funcionamiento de la comunidad mientras se consolida la organización. Establecen cómo se puede revocar la ciudadanía, el aporte obligatorio de cada ciudadano, las penalizaciones por incumplimiento, la participación en votaciones y asambleas, la administración de fondos y la eliminación de datos personales en casos de renuncia.</p>
+      <p>Estas leyes buscan mantener la unidad, proteger la naturaleza, fomentar la innovación y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, siempre respetando los principios de respeto, paz, innovación y unión.</p>
+      <a href="leyes.html" class="boton-hernavia">Leer las leyes completas</a>
+    </section>
 
-        <!-- Sección de Preguntas Frecuentes -->
-        <section class="section">
-          <h2 style="text-align:center; color:#006A44; margin-bottom:15px;">Preguntas Frecuentes</h2>
+    <!-- Sección de Preguntas Frecuentes -->
+    <section class="section">
+      <h2 style="text-align:center; color:#006A44; margin-bottom:15px;">Preguntas Frecuentes</h2>
 
-          <div style="text-align:center;">
-            <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
-          </div>
+      <div style="text-align:center;">
+        <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
+      </div>
 
-          <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
+      <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
+        <details class="faq-card">
+          <summary>¿Los documentos tienen validez legal fuera de Hernavia?</summary>
+          <p>No, todos los documentos tienen efecto únicamente dentro de la comunidad de Hernavia y no generan obligaciones legales externas.</p>
+        </details>
 
-            <details class="faq-card">
-               <summary>¿Los documentos tienen validez legal fuera de Hernavia?</summary>
-  <p>No, todos los documentos tienen efecto únicamente dentro de la comunidad de Hernavia y no generan obligaciones legales externas.</p>
-            </details>
+        <details class="faq-card">
+          <summary>¿Qué es la Carta Fundacional?</summary>
+          <p>Es el documento que expone la creación de Hernavia, sus principios, organización y otros aspectos fundamentales del proyecto.</p>
+        </details>
 
-            <details class="faq-card">
-            <summary>¿Qué es la Carta Fundacional?</summary>
-  <p>Es el documento que expone la creación de Hernavia, sus principios, organización y otros aspectos fundamentales del proyecto.</p>
-</details>
-            </details>
+        <details class="faq-card">
+          <summary>¿Por qué son Leyes Transitorias?</summary>
+          <p>Porque aún no están completamente consolidadas dentro del desarrollo de Hernavia. Con el tiempo podrán evolucionar hasta convertirse en leyes permanentes.</p>
+        </details>
 
-            <details class="faq-card">
-              <summary>¿Porque son Leyes Transitorias?</summary>
-  <p>Porque se consideran de que estas aun no estan solidad frente a como puede desarrolarse Hernavia por lo que se esperara a que las leyes se acomplen bien para dejar de ser transitorias.</p>
-</details>
-            </details>
+        <details class="faq-card">
+          <summary>¿Quiénes forman la estructura de Hernavia?</summary>
+          <p>Actualmente solo se tiene la figura principal del Arconte. A futuro se planean roles adicionales como el Sage y el Conclave Hernaviano, junto a otros cargos cuando haya más material humano disponible para integrarlos.</p>
+        </details>
 
-            <details class="faq-card">
-  <summary>¿Quiénes forman la estructura de Hernavia?</summary>
-  <p>Actualmente solo se tiene la figura principal del Arconte. A futuro se planean roles adicionales como el Sage y el Conclave Hernaviano, junto a otros cargos cuando haya más material humano disponible para integrarlos.</p>
-</details>
+        <details class="faq-card">
+          <summary>¿Las leyes serán iguales para ciudadanos virtuales?</summary>
+          <p>Lo más probable es que se adapten para ser más flexibles y puedan aplicarse por igual a todos, aunque podría considerarse una división entre ciudadanos presenciales y virtuales según sus deberes y participación.</p>
+        </details>
+      </div>
+    </section>
+  </main>
 
-            <details class="faq-card">
-              <summary>¿Las leyes seran iguales para ciudadanos vituales?</summary>
-              <p>Lo mas probable es que las leyes sean modificadas para ser menos rigidas y que puedan seguirlas todos por igual aunque como opcion alternativa se podran dividir las leyes entre ciudadanos y ciudadanos virtuales.</p>
-            </details>
+  <footer>
+    &copy; 2025 Hernavia — Proyecto Cultural
+  </footer>
 
-          </div>
-        </section>
-    </main>
+  <script>
+    // Mostrar / ocultar bloque de preguntas
+    const toggleButton = document.getElementById('toggleFAQ');
+    const faqContainer = document.getElementById('faqContainer');
+    let visible = false;
 
-    <style>
-      .faq-container {
-        display: flex;
-        flex-direction: column;
-        gap: 28px; /* ← más espacio entre los cuadros */
-      }
-
-      .faq-card {
-        background-color: white;
-        border: 2px solid #006A44;
-        border-radius: 10px;
-        padding: 18px 20px;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      }
-
-      .faq-card summary {
-        font-weight: bold;
-        color: #006A44;
-        font-size: 1.2em;
-        list-style: none;
-        outline: none;
-      }
-
-      .faq-card summary::marker {
-        display: none;
-      }
-
-      .faq-card[open] {
-        background-color: #f4fff9;
-        border-color: #004a2d;
-      }
-
-      .faq-card p {
-        margin-top: 10px;
-        color: #333;
-        line-height: 1.5;
-      }
-
-      .faq-toggle {
-        background-color: #006A44;
-        color: white;
-        border: none;
-        border-radius: 8px;
-        padding: 12px 25px;
-        font-size: 1.1em;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-      }
-
-      .faq-toggle:hover {
-        background-color: #004a2d;
-      }
-    </style>
-
-    <footer>
-        &copy; 2025 Hernavia — Proyecto Cultural
-    </footer>
-
-    <script>
-      // Mostrar / ocultar bloque de preguntas
-      const toggleButton = document.getElementById('toggleFAQ');
-      const faqContainer = document.getElementById('faqContainer');
-      let visible = false;
-
-      toggleButton.addEventListener('click', () => {
-        visible = !visible;
-        faqContainer.style.display = visible ? 'block' : 'none';
-        toggleButton.textContent = visible ? 'Ocultar Preguntas' : 'Mostrar Preguntas';
-      });
-
-      // Registrar Service Worker
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/Hernavia/sw.js')
-            .then(reg => console.log('Service Worker registrado:', reg.scope))
-            .catch(err => console.error('Error al registrar el SW:', err));
-        });
-      }
-    </script>
+    toggleButton.addEventListener('click', () => {
+      visible = !visible;
+      faqContainer.style.display = visible ? 'block' : 'none';
+      toggleButton.textContent = visible ? 'Ocultar Preguntas' : 'Mostrar Preguntas';
+    });
+  </script>
 </body>
 </html>
