--- a/index.html
+++ b/index.html
@@ -66,15 +66,14 @@
       </ul>
     </section>
 
-    <!-- Preguntas Frecuentes -->
-    <section class="texto-largo">
-      <h2 class="titulo-centro">Preguntas Frecuentes</h2>
+    <section class="section">
+      <h2 style="text-align:center; color:#006A44; margin-bottom:15px;">Preguntas Frecuentes</h2>
 
-      <div class="centro">
+      <div style="text-align:center;">
         <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
       </div>
 
-      <div id="faqContainer" class="faq-container" style="display:none;">
+      <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
         <details class="faq-card">
           <summary>¿Cómo puedo contactarlos?</summary>
           <p>Puedes escribirnos desde la sección de <a href="sugerencias.html">Sugerencias</a> o por nuestras redes sociales. Todos los mensajes llegan directamente al equipo de Hernavia.</p>
@@ -125,3 +124,4 @@
   </script>
 </body>
 </html>
+
