--- a/leyes.html
+++ b/leyes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leyes Transitorias de Hernavia</title>
-    <meta name="description" content="Descubre las Leyes Transitorias de Hernavia, que regulan la ciudadanía y el funcionamiento de la comunidad.">
+    <meta name="description" content="Consulta las Leyes Transitorias de Hernavia, que regulan la ciudadanía, los aportes y la organización comunitaria.">
     <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
     <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
@@ -33,19 +33,20 @@
 <main>
     <section class="texto-largo">
         <h2>Ley 1 – Revocación de Ciudadanía Hernaviana</h2>
-        <p>Un ciudadano podrá perder su ciudadanía de forma temporal o definitiva si incurre en alguno de los siguientes casos:</p>
+        <p>Un ciudadano podrá perder su ciudadanía, de forma temporal o definitiva, si incurre en alguno de los siguientes casos:</p>
         <ul>
             <li>Traición a Hernavia: colaborar con intereses que busquen dañar a Hernavia o destruir sus principios.</li>
             <li>Violencia grave contra otros hernavianos.</li>
             <li>Incumplimiento reiterado de deberes.</li>
-            <li>Engaño en el registro.</li>
-            <li>Actos ilegales.</li>
-            <li>Daño a la comunidad.</li>
+            <li>Engaño durante el proceso de registro.</li>
+            <li>Actos ilegales o contrarios a los principios hernavianos.</li>
+            <li>Daño a la comunidad o sus representantes.</li>
             <li>Decisión voluntaria: renuncia del ciudadano.</li>
         </ul>
-        <p>Nota: El Arconte podrá dictaminar penalizaciones distintas sin implicar revocación directa.</p>
+        <p><strong>Nota:</strong> El Arconte podrá dictaminar penalizaciones distintas sin implicar revocación directa.</p>
 
         <h2>Ley 2 – Aporte Obligatorio</h2>
+        <p>Todo ciudadano deberá contribuir al bienestar de la comunidad mediante al menos uno de los siguientes medios:</p>
         <ul>
             <li>Trabajo comunitario.</li>
             <li>Aporte de conocimientos.</li>
@@ -67,28 +68,33 @@
         <h2>Ley 4 – Participación Ciudadana</h2>
         <ul>
             <li>Votaciones comunitarias con voto igualitario.</li>
-            <li>Iniciativas ciudadanas: propuestas por grupos de al menos 3 ciudadanos y revisadas si alcanzan 10% de votos físicos.</li>
-            <li>Asambleas representativas: con al menos 10% de votos físicos por vereda junto al Arconte.</li>
+            <li>Iniciativas ciudadanas: propuestas por grupos de al menos tres ciudadanos y revisadas si alcanzan el 10 % de votos físicos.</li>
+            <li>Asambleas representativas: convocadas con al menos el 10 % de votos físicos por vereda, junto al Arconte.</li>
         </ul>
-        <p>Nota: Los menores tienen medio voto.</p>
+        <p><strong>Nota:</strong> Los menores tendrán derecho a medio voto.</p>
 
         <h2>Ley 5 – Regulación de Fondos y Recursos</h2>
         <ul>
-            <li>Los aportes son administrados por el Arconte.</li>
-            <li>Rendición de cuentas al menos una vez al año o cuando lo solicite la comunidad.</li>
+            <li>Los aportes serán administrados por el Arconte.</li>
+            <li>La rendición de cuentas deberá realizarse al menos una vez al año o cuando lo solicite la comunidad.</li>
         </ul>
 
         <h2>Ley 6 – Inactividad de Ciudadanos Hernavianos</h2>
-        <p>Inactividad de 2 meses: aviso de estatus. 3er mes: suspensión temporal. Recuperable participando en cualquier actividad oficial dentro del mes siguiente. Tras tercera suspensión injustificada: pérdida por 6 meses. Se justificará por motivos válidos.</p>
+        <p>Inactividad por dos meses: aviso de estatus.  
+        Al tercer mes: suspensión temporal.  
+        La ciudadanía será recuperable participando en cualquier actividad oficial dentro del mes siguiente.  
+        Tras una tercera suspensión injustificada, se perderá la ciudadanía por seis meses.  
+        Las ausencias podrán justificarse por motivos válidos.</p>
 
         <h2>Ley 7 – Eliminación de Datos</h2>
-        <p>Tras revocación o renuncia, los datos personales serán eliminados en un máximo de 30 días.</p>
+        <p>Tras la revocación o renuncia, los datos personales serán eliminados en un plazo máximo de 30 días.</p>
 
         <p><strong>Nota final:</strong> El Arconte podrá interpretar o modificar cualquier disposición de estas Leyes, siempre respetando los principios de respeto, paz, innovación y unión.</p>
-         <p style="text-align:center; margin-top:20px;">
-        <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
-    </p>
-</section>
+
+        <p style="text-align:center; margin-top:20px;">
+            <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
+        </p>
+    </section>
 </main>
 
 <footer>
