--- a/noticias.html
+++ b/noticias.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Noticias</title>
-  <meta name="description" content="Descubre Hernavia, una identidad colombiana donde creatividad, comunidad y cultura se unen por un futuro sostenible.">
+  <title>Noticias de Hernavia</title>
+  <meta name="description" content="Noticias actualizadas sobre las actividades, ferias y eventos del proyecto Hernavia.">
   <meta name="theme-color" content="#ffffff">
   <meta name="author" content="Proyecto Hernavia">
   <meta name="robots" content="index, follow">
@@ -15,36 +15,41 @@
   <link rel="stylesheet" href="estilo.css">
 
   <link rel="manifest" href="manifest.json">
-
   <link rel="canonical" href="https://hernavia.github.io/Hernavia/noticias.html">
 </head>
 
+<body>
   <header>
     <h1>Noticias de Hernavia</h1>
   </header>
 
-<nav class="nav-comun">
-  <a href="index.html">Inicio</a>
-  <a href="documentos.html">Documentos</a>
-  <a href="noticias.html">Noticias</a>
-  <a href="consultas.html">Consultas</a>
-  <a href="simbolos.html">Símbolos</a>
-  <a href="comounirse.html">¿Cómo unirse?</a>
-  <a href="sugerencias.html">Sugerencias</a>
-</nav>
-
-<div>
   <nav class="nav-comun">
+    <a href="index.html">Inicio</a>
+    <a href="documentos.html">Documentos</a>
     <a href="noticias.html">Noticias</a>
-    <a href="noticias-random.html" style="color:#ADFF2F; border-color:#8AFF00;">Noticias Random</a>
+    <a href="consultas.html">Consultas</a>
+    <a href="simbolos.html">Símbolos</a>
+    <a href="comounirse.html">¿Cómo unirse?</a>
+    <a href="sugerencias.html">Sugerencias</a>
   </nav>
-</div>
 
+  <div>
+    <nav class="nav-comun">
+      <a href="noticias.html" class="activo">Noticias</a>
+      <a href="noticias-random.html" style="color:#ADFF2F; border-color:#8AFF00;">Noticias Random</a>
+    </nav>
+  </div>
 
-   <section id="que-es" class="texto-largo">
-      <h2>Noticia 002</h2>
-<p>En el parque de gachancipa habra una feria empresarias de fecha no confirmada y yo estare con yukihert (pastelitos de yuca), eso es todo no hay mas por ahora</p>
-</section>
+  <main>
+    <section class="texto-largo">
+      <h2>Noticia 002 – Feria Empresarial en Gachancipá</h2>
+      <p>En el parque principal de Gachancipá se llevará a cabo una feria empresarial en una fecha aún por confirmar. Hernavia participará junto a <strong>Yukihert</strong> (pastelitos de yuca), presentando productos y compartiendo información sobre el proyecto.</p>
+      <p>Por el momento no hay más detalles confirmados.</p>
+
+      <p style="margin-top:20px;"><strong>Fuente:</strong> Comunicación interna de Hernavia, octubre de 2025.</p>
+    </section>
+  </main>
+
   <footer>
     &copy; 2025 Hernavia — Proyecto Cultural
   </footer>
